src/test/resources/purescript_examples/failing/DoNotSuggestComposition2.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith TypesDoNotUnify\n-- TODO: Check that this does not produce a "function composition is (<<<)"\n-- suggestion.\n\n')
  PSASTWrapperElement(Program)
    PSASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSASTWrapperElement(Qualified)
        PSASTWrapperElement(ModuleName)
          PsiElement(proper name)('DoNotSuggestComposition2')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('foo')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Value)
          PSASTWrapperElement(PrefixValue)
            PSASTWrapperElement(Let)
              PsiElement(let)('let')
              PsiElement(whitespace)(' ')
              PSASTWrapperElement(ValueDeclaration)
                PsiElement(identifier)('x')
                PsiElement(whitespace)(' ')
                PSASTWrapperElement(NamedBinder)
                  <empty list>
                PsiElement(=)('=')
                PsiElement(whitespace)(' ')
                PSASTWrapperElement(Value)
                  PSASTWrapperElement(PrefixValue)
                    PSASTWrapperElement(ObjectLiteral)
                      PsiElement({)('{')
                      PsiElement(whitespace)(' ')
                      PSASTWrapperElement(ObjectBinderField)
                        PSASTWrapperElement(identifier)
                          PsiElement(identifier)('y')
                        PsiElement(operator)(':')
                        PsiElement(whitespace)(' ')
                        PSASTWrapperElement(Value)
                          PSASTWrapperElement(PrefixValue)
                            PSASTWrapperElement(NumericLiteral)
                              PsiElement(natural)('3')
                              PsiElement(whitespace)(' ')
                      PsiElement(})('}')
                      PsiElement(whitespace)(' ')
              PsiElement(in)('in')
              PsiElement(whitespace)(' ')
              PSASTWrapperElement(Value)
                PSASTWrapperElement(PrefixValue)
                  PSASTWrapperElement(Var)
                    PSASTWrapperElement(Qualified)
                      PsiElement(identifier)('x')
                      PsiElement(whitespace)(' ')
                  PSASTWrapperElement(NumericLiteral)
                    PsiElement(natural)('2')
                    PsiElement(whitespace)('\n')
